--- a/App.html
+++ b/App.html
@@ -13,15 +13,17 @@
     <script src="https://code.highcharts.com/modules/series-label.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="modules/highchartsModules.js"></script>
+    <script src="modules/webhook.js"></script>
     <script src="scripts/App.js"></script>
     <script src="modules/vssModules.js"></script>
 
     <script>
-      vssModule.initialize();
+      _vss.initialize();
     </script>
 
     <div id="diagram">
-      <div id="diagramContainer"></div>
+      <div id="Container"></div>
+      <div id="Information"></div>
     </div>
   </body>
 </html>
